crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__multiple_joins.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
SELECT *
  FROM patient p
       LEFT JOIN observation o
       ON p.id = o.subject
       LEFT JOIN practitioner pr
       ON o.practitioner = pr.id
