crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__select_with_group_by_having.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
  SELECT status, count(*)
    FROM patient
GROUP BY status
  HAVING count(*) > 5
