crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__select_with_multiple_conditions.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
SELECT id, name, status
  FROM patient
 WHERE (active = TRUE AND status = 'active') OR deleted = FALSE
