crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__update_statement.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
UPDATE patient SET name = 'Jane Doe'
 WHERE id = 1
